force-app/main/default/objects/Account/fields/CLQ_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_City__c</fullName>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>