force-app/main/default/objects/Account/fields/CLQ_Corporation_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Corporation_Entity_Number__c</fullName>
    <inlineHelpText>Registry number of the corporation or entity</inlineHelpText>
    <label>Corporation / Entity Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>