force-app/main/default/objects/Account/fields/CLQ_DIRN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_DIRN__c</fullName>
    <description>District IRN number entered by the program during application creation.</description>
    <externalId>true</externalId>
    <label>Org IRN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>