force-app/main/default/objects/Account/fields/CLQ_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Email__c</fullName>
    <inlineHelpText>Email address commonly used for communication to the organization</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>