force-app/main/default/objects/Account/fields/CLQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CLQ_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used an External ID for Account object.</description>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>