force-app/main/default/objects/Account/fields/CLQ_FEIN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FEIN__c</fullName>
    <description>Shield Encrypted as per Security requirement</description>
    <label>FEIN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>