force-app/main/default/objects/Account/fields/CLQ_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Organization_Type__c</fullName>
    <label>Organization Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>