force-app/main/default/objects/Account/fields/CLQ_State__c.field-meta.xml
<CustomField>
    <fullName>CLQ_State__c</fullName>
    <label>State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>