force-app/main/default/objects/Account/fields/CLQ_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_2__c</fullName>
    <label>Street Address 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>