force-app/main/default/objects/Account/fields/CLQ_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>