force-app/main/default/objects/Account/fields/CLQ_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>