force-app/main/default/objects/Account/fields/Office_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Office_Closing_Time__c</fullName>
    <label>Office Closing Time</label>
    <type>Time</type>
</CustomField>