force-app/main/default/objects/Account/fields/Office_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Office_Start_Time__c</fullName>
    <label>Office Start Time</label>
    <type>Time</type>
</CustomField>