force-app/main/default/objects/Account/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCC - Type A Home</fullName>
            </value>
            <value>
                <fullName>FCC - Type B Home</fullName>
            </value>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Out of State</fullName>
            </value>
            <value>
                <fullName>School Age Child Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>