force-app/main/default/objects/Account/recordTypes/CLQ_Corporation_LLC.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Corporation_LLC</fullName>
    <active>true</active>
    <description>All corporation and LLC in relation with JFS</description>
    <label>Corporation / LLC</label>
</RecordType>