force-app/main/default/objects/Account/recordTypes/CLQ_Individual_Ownership.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Individual_Ownership</fullName>
    <active>true</active>
    <description>Used for individual ownership (includes all FCC)</description>
    <label>Individual Ownership</label>
</RecordType>