force-app/main/default/objects/Account/recordTypes/CLQ_ODE_Organization.recordType-meta.xml
<RecordType>
    <fullName>CLQ_ODE_Organization</fullName>
    <active>true</active>
    <description>Umbrella Organization</description>
    <label>ODE Organization</label>
</RecordType>