force-app/main/default/objects/Account/recordTypes/CLQ_Partnership.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Partnership</fullName>
    <active>true</active>
    <description>Association of 2 or more owners, used for JFS</description>
    <label>Partnership</label>
</RecordType>