force-app/main/default/objects/Account/validationRules/Account_Name_Valid_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Valid_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Name ), CONTAINS($Profile.Name , &quot;Reviewer&quot;))</errorConditionFormula>
    <errorMessage>Cannot Edit Account Name</errorMessage>
</ValidationRule>