force-app/main/default/objects/Account/validationRules/Custom_Setting_Valid_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Setting_Valid_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; ISPICKVAL(OEDS_Organization_Status__c  , &apos;New&apos;)</errorConditionFormula>
    <errorMessage>Not New Error Message. We encounter lot</errorMessage>
</ValidationRule>