force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Provider_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CLQ_DIRN__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CLQ_Organization_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Organizations</label>
</ListView>