force-app/main/default/objects/Account/listViews/ODEOrgs.listView-meta.xml
<ListView>
    <fullName>ODEOrgs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CLQ_DIRN__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Provider_Type__c</columns>
    <columns>OEDS_Organization_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CLQ_ODE_Organization</value>
    </filters>
    <label>ODE Orgs</label>
</ListView>