force-app/main/default/objects/Account/listViews/Org_CreatedTODAY.listView-meta.xml
<ListView>
    <fullName>Org_CreatedTODAY</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CLQ_DIRN__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Provider_Type__c</columns>
    <columns>OEDS_Organization_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Org-CreatedTODAY</label>
</ListView>